# trial-py

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/trial/: __init__.py  assertion.py  config.py  conversation.py  generator.py  judge.py  ndcg.py  result.py  tools.py
src/trial/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_agent_config.py  test_assertions.py  test_dx.py  test_from_execution.py  test_generator.py  test_judge.py  test_latency_hooks_session.py  test_new_assertions.py
