[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trial"
version = "0.1.0"
description = "Put your AI agents on trial."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.25", "openai>=1.0"]
dev = ["pytest>=8.0", "pytest-env>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/trial"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real LLM provider API key",
]
