[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trial"
version = "0.1.0"
description = "Put your AI agents on trial."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MTC Tech", email = "info@mtctech.io"},
]
keywords = ["ai", "llm", "testing", "evaluation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mtc-tech-org/trial-py"
Repository = "https://github.com/mtc-tech-org/trial-py"
Issues = "https://github.com/mtc-tech-org/trial-py/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
json = ["jsonschema>=4.0"]
all = ["anthropic>=0.25", "openai>=1.0", "jsonschema>=4.0"]
dev = ["pytest>=8.0", "pytest-env>=1.1", "jsonschema>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/trial"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real LLM provider API key",
]
